Update thank you page: use new Conley image and remove welcome packet link

--- a/thank-you.html
+++ b/thank-you.html
@@ -60,7 +60,7 @@
             <div style="max-width: 1200px; margin: 0 auto; background: white; border-radius: var(--radius-lg); box-shadow: var(--shadow-xl); padding: var(--spacing-xl); border-top: 5px solid var(--primary-color);">
                 <div style="display: grid; grid-template-columns: 180px 1fr; gap: var(--spacing-xl); align-items: start;">
                     <div style="text-align: center;">
-                        <img src="https://yvape.org/static/media/img/conley.6c1c0038.png" alt="Conley Peck" style="width: 150px; height: 150px; border-radius: 50%; object-fit: cover; border: 5px solid var(--primary-color); box-shadow: var(--shadow-md);">
+                        <img src="https://kicform.org/hs-fs/hubfs/conleyAsset_1.png?width=218&upscale=true&name=conleyAsset_1.png" alt="Conley Peck" style="width: 150px; height: 150px; border-radius: 50%; object-fit: cover; border: 5px solid var(--primary-color); box-shadow: var(--shadow-md);">
                     </div>
                     <div>
                         <h2 style="color: var(--text-dark); margin-bottom: var(--spacing-md); font-size: 1.75rem;">Hello!</h2>
@@ -68,13 +68,7 @@
                             Thank you for your interest in YVAPE. We are excited for your school to utilize the program. You can start enrolling students at any time by visiting <a href="https://yvape.org" style="color: var(--primary-color); font-weight: 600;">yvape.org</a>.
                         </p>
                         <p style="color: var(--text-dark); line-height: 1.7; margin-bottom: var(--spacing-sm);">
-                            <a href="https://yvape.org/static/media/pdfs/YVAPE%20Welcome%20Packet.pdf" target="_blank" style="display: inline-flex; align-items: center; gap: 8px; color: var(--pink-color); font-weight: 600; text-decoration: none; border-bottom: 2px solid var(--pink-color);">
-                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                    <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
-                                    <polyline points="14 2 14 8 20 8"></polyline>
-                                </svg>
-                                Click here for a Welcome Packet
-                            </a> for more information about program benefits and what you and your students can expect after enrolling.
+                            This page contains all the information about program benefits and what you and your students can expect after enrolling.
                         </p>
                         <p style="color: var(--text-dark); line-height: 1.7; margin-bottom: var(--spacing-md);">
                             We encourage you to share this information with other school personnel and staff. We're also happy to provide a brief virtual presentation to your school.
