Change orange headings to pink and remove circular styling from Conley image

--- a/thank-you.html
+++ b/thank-you.html
@@ -60,7 +60,7 @@
             <div style="max-width: 1200px; margin: 0 auto; background: white; border-radius: var(--radius-lg); box-shadow: var(--shadow-xl); padding: var(--spacing-xl); border-top: 5px solid var(--primary-color);">
                 <div style="display: grid; grid-template-columns: 180px 1fr; gap: var(--spacing-xl); align-items: start;">
                     <div style="text-align: center;">
-                        <img src="https://kicform.org/hs-fs/hubfs/conleyAsset_1.png?width=218&upscale=true&name=conleyAsset_1.png" alt="Conley Peck" style="width: 150px; height: 150px; border-radius: 50%; object-fit: cover; border: 5px solid var(--primary-color); box-shadow: var(--shadow-md);">
+                        <img src="https://kicform.org/hs-fs/hubfs/conleyAsset_1.png?width=218&upscale=true&name=conleyAsset_1.png" alt="Conley Peck" style="width: 150px; height: auto; object-fit: contain; box-shadow: var(--shadow-md);">
                     </div>
                     <div>
                         <h2 style="color: var(--text-dark); margin-bottom: var(--spacing-md); font-size: 1.75rem;">Hello!</h2>
@@ -147,16 +147,16 @@
                     <h2 style="color: white; margin-bottom: var(--spacing-md); font-size: 1.75rem; text-align: center;">HOW SCHOOLS USE YVAPE</h2>
                     <p style="text-align: center; color: rgba(255,255,255,0.9); margin-bottom: var(--spacing-lg); font-weight: 600;">OVER 200 CA SCHOOLS</p>
                     <div style="display: flex; flex-direction: column; gap: var(--spacing-md);">
-                        <div style="background: rgba(255,255,255,0.1); padding: var(--spacing-md); border-radius: var(--radius-md); border-left: 4px solid var(--secondary-color);">
-                            <h3 style="color: var(--secondary-color); margin-bottom: var(--spacing-xs); font-size: 1.1rem;">PRIMARY PROGRAM</h3>
+                        <div style="background: rgba(255,255,255,0.1); padding: var(--spacing-md); border-radius: var(--radius-md); border-left: 4px solid var(--pink-color);">
+                            <h3 style="color: var(--pink-color); margin-bottom: var(--spacing-xs); font-size: 1.1rem;">PRIMARY PROGRAM</h3>
                             <p style="color: white; margin: 0; font-size: 0.95rem;">School refers student to YVAPE</p>
                         </div>
-                        <div style="background: rgba(255,255,255,0.1); padding: var(--spacing-md); border-radius: var(--radius-md); border-left: 4px solid var(--secondary-color);">
-                            <h3 style="color: var(--secondary-color); margin-bottom: var(--spacing-xs); font-size: 1.1rem;">OPTION OF MANY</h3>
+                        <div style="background: rgba(255,255,255,0.1); padding: var(--spacing-md); border-radius: var(--radius-md); border-left: 4px solid var(--pink-color);">
+                            <h3 style="color: var(--pink-color); margin-bottom: var(--spacing-xs); font-size: 1.1rem;">OPTION OF MANY</h3>
                             <p style="color: white; margin: 0; font-size: 0.95rem;">School gives student option to choose YVAPE instead of or in addition to other programs</p>
                         </div>
-                        <div style="background: rgba(255,255,255,0.1); padding: var(--spacing-md); border-radius: var(--radius-md); border-left: 4px solid var(--secondary-color);">
-                            <h3 style="color: var(--secondary-color); margin-bottom: var(--spacing-xs); font-size: 1.1rem;">OVERFLOW PROGRAM</h3>
+                        <div style="background: rgba(255,255,255,0.1); padding: var(--spacing-md); border-radius: var(--radius-md); border-left: 4px solid var(--pink-color);">
+                            <h3 style="color: var(--pink-color); margin-bottom: var(--spacing-xs); font-size: 1.1rem;">OVERFLOW PROGRAM</h3>
                             <p style="color: white; margin: 0; font-size: 0.95rem;">School refers student to YVAPE when primary program is full</p>
                         </div>
                     </div>
@@ -186,7 +186,7 @@
                     <p style="color: var(--text-light); text-align: center; font-size: 0.9rem; margin: 0;">See Program Content</p>
                 </a>
                 <a href="contact.html" style="display: flex; flex-direction: column; align-items: center; padding: var(--spacing-lg); background: white; border-radius: var(--radius-lg); text-decoration: none; box-shadow: var(--shadow-md); transition: all 0.3s ease; border: 2px solid transparent;">
-                    <svg width="50" height="50" viewBox="0 0 24 24" fill="none" stroke="var(--secondary-color)" stroke-width="2" style="margin-bottom: var(--spacing-sm);">
+                    <svg width="50" height="50" viewBox="0 0 24 24" fill="none" stroke="var(--pink-color)" stroke-width="2" style="margin-bottom: var(--spacing-sm);">
                         <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path>
                     </svg>
                     <h3 style="color: var(--text-dark); font-size: 1.1rem; margin-bottom: var(--spacing-xs);">Request Presentation</h3>
