Style collapsed sections with gradient like progress bar - no opacity washout

--- a/agent-protocol.html
+++ b/agent-protocol.html
@@ -149,7 +149,9 @@
 
         .section-card.collapsed {
             overflow: visible;
-            opacity: 0.6;
+            background: linear-gradient(135deg, rgba(0, 166, 206, 0.05), rgba(141, 198, 63, 0.05));
+            border-left: 5px solid transparent;
+            border-image: linear-gradient(135deg, var(--primary-color), var(--accent-color)) 1;
         }
 
         .section-card.collapsed .section-content {
