Add YVAPE logo to protocol header

--- a/agent-protocol.html
+++ b/agent-protocol.html
@@ -736,9 +736,12 @@
         <!-- Header -->
         <div class="protocol-header">
             <div class="header-content">
-                <div>
-                    <h1 style="margin: 0 0 var(--spacing-sm) 0; font-size: 2.5rem;">YVAPE Phone Agent Tool</h1>
-                    <p style="margin: 0; font-size: 1.1rem; opacity: 0.95;">Interactive Protocol Guide - Draft 3</p>
+                <div style="display: flex; align-items: center; gap: var(--spacing-lg);">
+                    <img src="images/yvape_logo.png" alt="YVAPE Logo" style="height: 60px; width: auto; filter: brightness(0) invert(1);">
+                    <div>
+                        <h1 style="margin: 0 0 var(--spacing-sm) 0; font-size: 2.5rem;">YVAPE Phone Agent Tool</h1>
+                        <p style="margin: 0; font-size: 1.1rem; opacity: 0.95;">Interactive Protocol Guide - Draft 3</p>
+                    </div>
                 </div>
                 <div class="timer-widget">
                     <div class="timer-display" id="timerDisplay">00:00:00</div>
