Create standalone school enrollment form and update thank you page headlines
- Created school-enrollment.html with form for school personnel only
- Removed student and parent form sections
- Updated Start Enrollment button to link to new standalone page
- Changed thank you page program headlines from pink to dark navy (#1a1a2e)
- Added font-weight: 700 for better readability
- Form includes school info, student info, and program agreement sections

--- a/thank-you.html
+++ b/thank-you.html
@@ -148,15 +148,15 @@
                     <p style="text-align: center; color: rgba(255,255,255,0.9); margin-bottom: var(--spacing-lg); font-weight: 600;">OVER 200 CA SCHOOLS</p>
                     <div style="display: flex; flex-direction: column; gap: var(--spacing-md);">
                         <div style="background: rgba(255,255,255,0.1); padding: var(--spacing-md); border-radius: var(--radius-md); border-left: 4px solid var(--pink-color);">
-                            <h3 style="color: var(--pink-color); margin-bottom: var(--spacing-xs); font-size: 1.1rem;">PRIMARY PROGRAM</h3>
+                            <h3 style="color: #1a1a2e; margin-bottom: var(--spacing-xs); font-size: 1.1rem; font-weight: 700;">PRIMARY PROGRAM</h3>
                             <p style="color: white; margin: 0; font-size: 0.95rem;">School refers student to YVAPE</p>
                         </div>
                         <div style="background: rgba(255,255,255,0.1); padding: var(--spacing-md); border-radius: var(--radius-md); border-left: 4px solid var(--pink-color);">
-                            <h3 style="color: var(--pink-color); margin-bottom: var(--spacing-xs); font-size: 1.1rem;">OPTION OF MANY</h3>
+                            <h3 style="color: #1a1a2e; margin-bottom: var(--spacing-xs); font-size: 1.1rem; font-weight: 700;">OPTION OF MANY</h3>
                             <p style="color: white; margin: 0; font-size: 0.95rem;">School gives student option to choose YVAPE instead of or in addition to other programs</p>
                         </div>
                         <div style="background: rgba(255,255,255,0.1); padding: var(--spacing-md); border-radius: var(--radius-md); border-left: 4px solid var(--pink-color);">
-                            <h3 style="color: var(--pink-color); margin-bottom: var(--spacing-xs); font-size: 1.1rem;">OVERFLOW PROGRAM</h3>
+                            <h3 style="color: #1a1a2e; margin-bottom: var(--spacing-xs); font-size: 1.1rem; font-weight: 700;">OVERFLOW PROGRAM</h3>
                             <p style="color: white; margin: 0; font-size: 0.95rem;">School refers student to YVAPE when primary program is full</p>
                         </div>
                     </div>
