--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <h1 class="hero-title">Youth Vaping Alternative Program Education</h1>
                 <p class="hero-subtitle">YVAPE is a <strong>FREE</strong> educational intervention program that serves as an alternative to suspension, providing phone and video coaching support to students who have been found with nicotine or marijuana at school.</p>
                 <div class="hero-cta">
-                    <a href="#enrollment-form" class="btn btn-lg" style="background: var(--pink-color); color: white; border-color: var(--pink-color);">Start Enrollment</a>
+                    <a href="school-enrollment.html" class="btn btn-lg" style="background: var(--pink-color); color: white; border-color: var(--pink-color);">Start Enrollment</a>
                     <a href="#how-it-works" class="btn btn-secondary btn-lg">Learn More</a>
                 </div>
                 <p class="hero-note">Available to California public schools with students 12 years and older</p>
