Fix section 2 collapsing issue
- Removed duplicate content that was outside section-content div
- Completed the Review as needed script text
- Section 2 now properly collapses and expands
- All content properly contained within section boundaries

--- a/agent-protocol.html
+++ b/agent-protocol.html
@@ -877,47 +877,13 @@
                     <strong>Review as needed</strong>
                 </div>
                 <p style="margin-top: var(--spacing-md);">
-                    We will talk on the phone for a bit today. I'll get to learn about your experie...
+                    We will talk on the phone for a bit today. I'll get to learn about your experience and answer any questions you have about nicotine or marijuana. That's it!<br><br>
+                    I'm not here to lecture you or make you do anything. Whatever you decide to do after this call is totally up to you. I'm just here to listen and support you.<br><br>
+                    Any questions before we get started?
                 </p>
             </div>
 
             </div><!-- end section-content -->
-
-            <p class="question-prompt">1. "How did you end up having to talk with us (what happened when you got caught)?"</p>
-            <textarea class="notes-field" name="s2_how_caught" data-hubspot="s2_how_caught" placeholder="Note: Ask open questions to clarify. Reflect and summarize what the student said..."></textarea>
-
-            <div class="optional-directions">
-                <div class="optional-label">Optional Directions</div>
-                <ul style="margin: var(--spacing-xs) 0 0 0; padding-left: var(--spacing-lg);">
-                    <li>What was that like for you?</li>
-                    <li>What kind of trouble has that caused for you?</li>
-                </ul>
-            </div>
-
-            <p class="question-prompt">2. "Was that nicotine, marijuana, or both?"</p>
-            <div class="radio-group">
-                <label class="radio-option">
-                    <input type="radio" name="substance" data-hubspot="s2_substance_type" value="nicotine"> Nicotine only
-                </label>
-                <label class="radio-option">
-                    <input type="radio" name="substance" data-hubspot="s2_substance_type" value="both"> Nicotine + Marijuana
-                </label>
-                <label class="radio-option">
-                    <input type="radio" name="substance" data-hubspot="s2_substance_type" value="marijuana"> Marijuana only
-                </label>
-                <label class="radio-option">
-                    <input type="radio" name="substance" data-hubspot="s2_substance_type" value="neither-nic"> Neither (trouble for nicotine)
-                </label>
-                <label class="radio-option">
-                    <input type="radio" name="substance" data-hubspot="s2_substance_type" value="neither-mj"> Neither (trouble for marijuana)
-                </label>
-            </div>
-
-            <p class="question-prompt">3. "Tell me about your nicotine/marijuana use."</p>
-            <textarea class="notes-field" name="s2_use_history" data-hubspot="s2_use_history" placeholder="Product type, frequency, last use, what got them started..."></textarea>
-
-            <div class="optional-directions">
-                <div class="optional-label">Optional Directions</div>
                 <ul style="margin: var(--spacing-xs) 0 0 0; padding-left: var(--spacing-lg);">
                     <li>Product type</li>
                     <li>How often (regular vs irregular use vs experimental user)</li>
