Update Spanish pages to match English pages
- Removed Pixel Demo popup from es/index.html
- Removed Pixel Demo popup from es/resources.html
- Removed Pixel Demo popup from es/videos.html
- Removed Pixel Demo popup from es/about.html
- Removed Pixel Demo popup from es/contact.html
- Added tracking buttons to es/resources.html (Referir Hoy, Dejar Ahora)
- Spanish pages now fully synchronized with English pages

--- a/es/resources.html
+++ b/es/resources.html
@@ -15,9 +15,6 @@
         </svg>
     </button>
 
-    <!-- Popup Link -->
-    <a href="https://ingramjam.github.io/quit-journey/demo-pixel.html" class="popup-link" target="_blank">Ver Demo Pixel</a>
-
     <nav class="navbar" id="navbar">
         <div class="container">
             <div class="nav-wrapper">
@@ -50,6 +47,36 @@
 
     <section class="resources-section">
         <div class="container">
+            <!-- Quick Actions -->
+            <div class="quick-actions-grid">
+                <div class="quick-action-card pink-gradient">
+                    <h3>Referencia Electrónica de Estudiantes</h3>
+                    <p>Inscripción de estudiantes por parte del personal escolar a los servicios de cesación del tabaco de Kick It California.</p>
+                    <a href="https://kickitca.org/student-referral-form" 
+                       target="_blank" 
+                       class="btn btn-primary"
+                       data-tracking-category="Referral"
+                       data-tracking-action="Click"
+                       data-tracking-label="Student E-Referral - Refer Today Button"
+                       onclick="trackButtonClick(this)">Referir Hoy</a>
+                </div>
+                <div class="quick-action-card blue-gradient">
+                    <h3>Inscríbase en Línea</h3>
+                    <p>Servicios de cesación del tabaco de Kick It California para obtener ayuda para usted mismo o ayuda para otra persona.</p>
+                    <a href="https://www.kickitca.org/form/intake/self/1" 
+                       target="_blank" 
+                       class="btn btn-primary"
+                       data-tracking-category="Enrollment"
+                       data-tracking-action="Click"
+                       data-tracking-label="Enroll Online - Quit Now Button"
+                       onclick="trackButtonClick(this)">Dejar Ahora</a>
+                </div>
+            </div>
+
+            <!-- YVAPE Resources -->
+            <div class="resources-section">
+                <h2>Recursos YVAPE</h2>
+                <p class="subtitle-text">Consulte los recursos a continuación para obtener más información sobre el uso de nicotina y marihuana.</p>
             <div class="resources-grid">
                 <div class="resource-card">
                     <div class="resource-icon">
